// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analyze basic directory 1`] = `
Object {
  "componentTotal": 1,
  "componentUsage": Object {
    "div": 1,
  },
  "componentUsageTotal": 1,
  "elapsedTime": Any<Number>,
  "errors": Object {},
  "filenames": Array [
    "/Users/brianmock/w/jsx-info/fixtures/basic/main.js",
  ],
  "lineUsage": Object {
    "div": Object {
      "a": Array [
        Object {
          "endLoc": Position {
            "column": 6,
            "line": 1,
          },
          "filename": "/Users/brianmock/w/jsx-info/fixtures/basic/main.js",
          "prettyCode": "   1 | <div a b c />;",
          "propCode": "a",
          "startLoc": Position {
            "column": 5,
            "line": 1,
          },
        },
      ],
      "b": Array [
        Object {
          "endLoc": Position {
            "column": 8,
            "line": 1,
          },
          "filename": "/Users/brianmock/w/jsx-info/fixtures/basic/main.js",
          "prettyCode": "   1 | <div a b c />;",
          "propCode": "b",
          "startLoc": Position {
            "column": 7,
            "line": 1,
          },
        },
      ],
      "c": Array [
        Object {
          "endLoc": Position {
            "column": 10,
            "line": 1,
          },
          "filename": "/Users/brianmock/w/jsx-info/fixtures/basic/main.js",
          "prettyCode": "   1 | <div a b c />;",
          "propCode": "c",
          "startLoc": Position {
            "column": 9,
            "line": 1,
          },
        },
      ],
    },
  },
  "propUsage": Object {
    "div": Object {
      "a": 1,
      "b": 1,
      "c": 1,
    },
  },
  "suggestedPlugins": Array [],
}
`;

exports[`analyze empty directory 1`] = `
Object {
  "componentTotal": 0,
  "componentUsage": Object {},
  "componentUsageTotal": 0,
  "elapsedTime": Any<Number>,
  "errors": Object {},
  "filenames": Array [],
  "lineUsage": Object {},
  "propUsage": Object {},
  "suggestedPlugins": Array [],
}
`;

exports[`analyze prop-usage directory 1`] = `
Object {
  "componentTotal": 1,
  "componentUsage": Object {
    "div": 8,
  },
  "componentUsageTotal": 8,
  "elapsedTime": Any<Number>,
  "errors": Object {},
  "filenames": Array [
    "/Users/brianmock/w/jsx-info/fixtures/prop-usage/main.js",
  ],
  "lineUsage": Object {
    "div": Object {
      "a": Array [
        Object {
          "endLoc": Position {
            "column": 6,
            "line": 1,
          },
          "filename": "/Users/brianmock/w/jsx-info/fixtures/prop-usage/main.js",
          "prettyCode": "   1 | <div a />;",
          "propCode": "a",
          "startLoc": Position {
            "column": 5,
            "line": 1,
          },
        },
        Object {
          "endLoc": Position {
            "column": 6,
            "line": 3,
          },
          "filename": "/Users/brianmock/w/jsx-info/fixtures/prop-usage/main.js",
          "prettyCode": "   3 | <div a b />;",
          "propCode": "a",
          "startLoc": Position {
            "column": 5,
            "line": 3,
          },
        },
        Object {
          "endLoc": Position {
            "column": 6,
            "line": 4,
          },
          "filename": "/Users/brianmock/w/jsx-info/fixtures/prop-usage/main.js",
          "prettyCode": "   4 | <div a b c />;",
          "propCode": "a",
          "startLoc": Position {
            "column": 5,
            "line": 4,
          },
        },
      ],
    },
  },
  "propUsage": Object {
    "div": Object {
      "a": 3,
    },
  },
  "suggestedPlugins": Array [],
}
`;
